--- a/CSS/ex02.css
+++ b/CSS/ex02.css
@@ -1,6 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 /* Estilos iniciais para desktop */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+html, body {
+  width: 100%;
+  overflow-x: hidden;
+}
 body {
   margin: 0;
   padding: 0;
@@ -189,10 +198,16 @@ main {
 
 /* Estilos para telas menores */
 @media (max-width: 800px) and (max-height: 1000px) {
-  body {
+  * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
   }
+  html, body {
+    width: 100%;
+    overflow-x: hidden;
+  }
+
   .img_fundo {
     height: 67vh;
     width: 100%;
@@ -300,7 +315,7 @@ main {
 }
 /* Estilos para telas ainda menores (celulares) */
 @media (max-width: 480px) {
-  header {
+  /* header {
     padding: 10px;
   }
 
@@ -310,5 +325,125 @@ main {
 
   .menu ul li a {
     font-size: 16px;
+  } */
+   /* fazendo um teste */
+   * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  html, body {
+    width: 100%;
+    overflow-x: hidden;
+  }
+
+  .img_fundo {
+    height: 67vh;
+    width: 100%;
+    margin: 0 auto;
+  }
+  .logo {
+    display: flex;
+    width: 80%;
+    text-align: center;
+    flex-direction: column;
+    gap: 0;
+    background-color: rgba(255, 255, 255, 0.7);
+    border-radius: 10px;
+    padding: 0;
+    img {
+      width: 15%;
+      height: 15%;
+    }
+    h1 {
+      font-size: 28px;
+      margin: 0;
+      background-color: rgba(255, 255, 255, 0.0);
+    }
+  }
+  header {
+    width: 100%;
+    position: absolute;
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    z-index: 1000;
+  }
+
+  .menu ul {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    text-align: center;
+    z-index: 1;
+  }
+
+  .menu ul li {
+    margin: 10px 0;
+    width: 100%;
+  }
+
+  /* Exibir o menu ao marcar o checkbox */
+  #menu-toggle:checked + .hamburger + .menu ul {
+    display: flex;
+  }
+
+  /* Estilo do botão hamburger */
+  .hamburger {
+    display: block;
+    cursor: pointer;
+    /* background-color: #f55858; */
+    background-color: rgba(255, 255, 255, 0.7);
+    border: none;
+    color: rgb(0, 0, 0);
+    padding: 10px;
+    font-size: 18px;
+    width: 95%;
+    text-align: center;
+  }
+  main {
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+  }
+  .conteiner_letras {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 0;
+    z-index: 0;
+    
+    position: absolute;
+    top: 14rem;
+  }
+  .meio {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .letras {
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 0;
+  }
+  .menu {
+    width: 100%;
+    backdrop-filter: blur(50px);
+    border-radius: 5px;
+    ul {
+      padding: 0;
+    }
+  }
+  .serviços {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 1rem;
+  }
+  .conteiner_serviços {
+    width: 90%;
   }
 }
